--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -8,6 +8,15 @@ html, body {
     background-color: rgb(23,26,33);
 }
 
+img.logo {
+    position: fixed;
+    height: 800px;
+    width: 800px;
+    top: 3%;
+    left: 50%;
+    opacity: 0.1;
+}
+
 form.sign {
     display: inline-block;
     position: fixed;
@@ -15,4 +24,24 @@ form.sign {
     width: 100%;
     top: 50%;
     left: 0;
+}
+
+input.subBtn {
+    visibility: hidden;
+}
+
+input.inp {
+    margin-left: 10%;
+    outline: none;
+    color: rgb(54,111,149);
+    transition-duration: 500ms;
+    text-align: center;
+    border-radius: 20px;
+}
+
+input.inp:focus {
+    transform: scale(2);
+    border: none;
+    border-bottom: 2px solid rgb(54, 111, 149);
+    background-color: rgb(23,26,33);
 }
