--- a/public/styles/mobileStyle.css
+++ b/public/styles/mobileStyle.css
@@ -1,3 +1,22 @@
-@media only screen and (max-width: 900px;) {
+@media only screen and (max-width: 900px) {
+    img.logo {
+        top: 10%;
+        left: 0;
+        height: 65%;
+        width: 100%;
+        z-index: -11;
+    }
 
+    form.sign {
+        top: 80%;
+    }
+
+    input.inp {
+        width: 40%;
+        margin-left: 30%;
+    }
+
+    input.inp:focus {
+        transform: scale(2);
+    }
 }
