--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -11,9 +11,9 @@ html, body {
 
 img.logo {
     position: fixed;
-    height: 800px;
-    width: 800px;
-    top: 3%;
+    height: 700px;
+    width: 700px;
+    top: 10%;
     left: 50%;
     opacity: 0.1;
     animation: logoShow 1s linear; 
@@ -71,4 +71,37 @@ input.inp:focus {
     border: none;
     border-bottom: 2px solid rgb(54, 111, 149);
     background-color: rgb(23,26,33);
+}
+
+header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 50px;
+    width: 100%;
+    background-color: rgb(54, 111, 149);
+    box-shadow: 0 0 10px rgb(0, 0, 0);
+}
+
+p.login {
+    display: inline;
+    margin-left: 2em;
+    line-height: 50px;
+    color: rgb(255, 255, 255);
+}
+
+button.exit {
+    float: right;
+    margin: 10px;
+    padding: 10px;
+    border: none;
+    border-radius: 30px;
+    background-color: rgb(255, 255, 255);
+    color: rgb(54, 111, 149);
+    outline: none;
+    transition-duration: 400ms;
+}
+
+button.exit:hover {
+    box-shadow: 0 0 10px rgb(244, 244, 233);
 }
