--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -56,7 +56,7 @@ input.subBtn {
 input.inp {
     margin-left: 15%;
     outline: none;
-    color: rgb(54,111,149);
+    color: rgb(255, 255, 255);
     transition-duration: 500ms;
     text-align: center;
     border-radius: 20px;
