--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -152,14 +152,19 @@ div.chat {
     border-radius: 6px;
 }
 
+h4 {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
 nav {
     position: fixed;
-    left: 70%;
+    left: 80%;
     top: 100px;
-    height: 60%;
+    height: 80%;
     width: 15%;
-    background-color: red;
-    padding: 100px;
+    background-color: rgba(0, 0, 0, 0.1);
+    padding: 10px;
     box-shadow: 0 0 10px rgb(0, 0, 0);
     z-index: 88;
 }
@@ -167,4 +172,16 @@ nav {
 input.chatsBtn {
     width: 100%;
     margin: 1px;
+    border: none;
+    padding: 5px;
+    background-color: rgba(0, 0, 0, 0.2);
+    color: rgb(54, 111, 149);
+    transition-duration: 400ms;
+}
+
+input.chatsBtn:hover{
+    cursor: pointer;
+    background-color: rgb(54, 111, 149);
+    color: rgb(255, 255, 255);
+    box-shadow: 0 0 5px rgb(0, 0, 0);
 }
