--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -127,18 +127,17 @@ input.mes {
 
 div.chat {
     position: relative;
-    margin-top: 3%;
+    margin-top: 100px;
     left: 3%;
     padding: 3%;
     width: 40%;
-    height: 500px;
+    height: 450px;
     background-color: rgba(0, 0, 0, 0.2);
     overflow: auto;
 }
 
 
 #chat::-webkit-scrollbar-track {
-	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
 	background-color: rgb(255, 255, 255);
 }
 
