--- a/public/styles/mobileStyle.css
+++ b/public/styles/mobileStyle.css
@@ -3,7 +3,7 @@
         top: 20%;
         left: 0;
         height: 400px;
-        width: 100%;
+        width: 400px;
         z-index: -11;
     }
 
