--- a/public/styles/mobileStyle.css
+++ b/public/styles/mobileStyle.css
@@ -1,7 +1,7 @@
 @media only screen and (max-width: 900px) {
     img.logo {
         top: 20%;
-        left: 0;
+        left: -10px;
         height: 400px;
         width: 400px;
         z-index: -11;
@@ -12,8 +12,9 @@
     }
 
     input.inp {
-        width: 40%;
-        margin-left: 30%;
+        margin-left: 5%;
+        margin-top: 20px;
+        width: 70%;
     }
 
     input.inp:focus {
@@ -23,8 +24,13 @@
     input.mes {
         position: fixed;
         top: 90%;
-        left: 0;
+        left: 25%;
         width: 40%;
+    }
+
+    p.err {
+        position: fixed;
+        top: 80%;
     }
 
     #chat {
@@ -39,5 +45,9 @@
         width: 85%;
         left: 5%;
         top: 60px;
+    }
+
+    label {
+        text-align: center;
     }
 }
