--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -50,7 +50,8 @@ form.sign {
 }
 
 input.inp {
-    margin-left: 15%;
+    margin-left: -40px;
+    margin-bottom: 60px;
     outline: none;
     color: rgb(255, 255, 255);
     transition-duration: 500ms;
@@ -180,4 +181,10 @@ input.chatsBtn:hover{
     background-color: rgb(54, 111, 149);
     color: rgb(255, 255, 255);
     box-shadow: 0 0 5px rgb(0, 0, 0);
+}
+
+label {
+    display: inline-block;
+    margin-left: 15%;
+    color: rgb(255, 255, 255);
 }
