--- a/public/styles/mobileStyle.css
+++ b/public/styles/mobileStyle.css
@@ -12,19 +12,28 @@
     }
 
     input.inp {
-        margin-left: 5%;
         margin-top: 20px;
-        width: 70%;
+        width: 50%;
     }
 
     input.inp:focus {
         transform: scale(2);
     }
 
+    input.inpS {
+        margin-left: 30%;
+        margin-top: 20px;
+        width: 40%;
+    }
+
+    input.inpS:focus {
+        transform: scale(2);
+    }
+
     input.mes {
         position: fixed;
         top: 90%;
-        left: 25%;
+        left: 40%;
         width: 40%;
     }
 
